# c-gallery-simultion-processor-upd

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  runner.sh
src/: client.c  common.h  logger.c  server.c  tcpIO.h
